# python-state-machine

./: README.md  pyproject.toml
python_statemachine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
statemachine/: __init__.py  helpers.py  machine.py  types.py
tests/: test_helpers.py  test_machine.py  test_types.py
